// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rx-connect test accepts function-based mutations 1`] = `
<div>
  123
</div>
`;

exports[`rx-connect test ignores not connect properties 1`] = `<div />`;

exports[`rx-connect test noDebounce 1`] = `
<div>
  0
</div>
`;

exports[`rx-connect test noDebounce 2`] = `
<div>
  1
</div>
`;

exports[`rx-connect test passes children automatically 1`] = `
<div>
  Hello, RxConnect!
</div>
`;

exports[`rx-connect test passes properties as Observable 1`] = `
<div>
  123
</div>
`;

exports[`rx-connect test receives new props 1`] = `
<div>
  15
</div>
`;

exports[`rx-connect test receives new props 2`] = `
<div>
  15
</div>
`;

exports[`rx-connect test receives new props 3`] = `
<div>
  -15
</div>
`;

exports[`rx-connect test throws an error if mutation is neither an object or function 1`] = `
Array [
  "Mutation must be a plain object or function. Check rxConnect of Component. Got: ",
  Array [
    123,
  ],
]
`;

exports[`rx-connect test throws an error if selector is neither an Observable or function 1`] = `
Array [
  "Selector must be a function or an Observable. Check rxConnect of Component. Got: ",
  undefined,
]
`;

exports[`rx-connect test throws an error if selector returns non-Observable 1`] = `
Array [
  "Selector must return an Observable or an iterator of observables. Check rxConnect of Component. Got: ",
  undefined,
]
`;

exports[`rx-connect test works with Array 1`] = `
<div>
  123
  bar
</div>
`;

exports[`rx-connect test works with Generator 1`] = `
<div>
  123
  bar
</div>
`;

exports[`rx-connect test works with Observable 1`] = `
<div>
  123
</div>
`;
